ui.frontend/src/main/webpack/etisalat/styles/teaservariants.scss
/*Teaser CSS */
.greybg-container .cmp-container{
    // padding:2rem;
}
@media (max-width: 991px){
.greybg-container .cmp-container, .whitebg-container.cmp-container{
    // padding-left: 1rem;
    // padding-right: 1rem;
}
}
.whitebg-container .cmp-container{
     padding:2rem;
    margin:40px;
    box-shadow: 0 5px 10px 0 rgb(0 0 0 / 10%);
    border-radius: 4px;
}


/*Teaser CSS with variants*/
.greybg-container h2, .whitebg-container h2{

margin-top:0px;
line-height: 1.3 !important;

}
.cmp_tabs__vertical_view h2 a{

 line-height: 1.3 !important;
	
	}



.greybg-container , .whitebg-container {
	.cmp-teaser__title {
		font-family: Neotech-medium, GE SS Two, Roboto, Arial, sans-serif;
		color: #353738;
		font-weight: 400;
		margin-bottom: 1rem;
		font-size: 28px;
	}
	.cmp-teaser__pretitle {
		font-weight: 700;
		margin-bottom: 6px;
		margin-top: 12px;
		letter-spacing: 4px;
		color: #919192!important;
		line-height: 26px;
		font-size: 12px!important;
		font-family: Lato, GE SS Two, Roboto, Arial, sans-serif;
	}
    .cmp-teaser__description ul{
		list-style-position: none;
		margin-bottom: 1rem!important;
		color: #7a7a7a;
       
    }
     .cmp-teaser__description ul li{
        padding-left: 1rem;
    position: relative;
    margin: 0;
    margin-bottom: 4px;
        font-size: 16px;
        color: #919192!important;
		line-height: 26px;
		font-family: Lato, GE SS Two, Roboto, Arial, sans-serif;
    }

	.cmp-teaser__description p {
		font-size: 16px;
		color: #919192!important;
		line-height: 26px;
		font-family: Lato, GE SS Two, Roboto, Arial, sans-serif;
	}
	.cmp-teaser__description p {
		margin-bottom: .5rem!important;
	}
	.cmp-teaser__description p+p {
		margin-top: 1rem;
	}
}
@media (min-width:375px) and (max-width:900px) {
	.greybg-container, .whitebg-container  {
		.cmp-teaser {
			display: flex;
			flex-direction: column-reverse;
		}
		.cmp-teaser__title {
			font-size: 22px;
		}
	}
}

@media (min-width:992px) {
	.greybg-container .image-left .cmp-teaser__content, .whitebg-container .image-left .cmp-teaser__content {
		padding-right: 4rem;
		padding-left: 1.5rem;
        width: 50%;
	}
	.greybg-container .image-right{
        .cmp-teaser {
            	display: flex;
			flex-direction:row-reverse;
        }
		.cmp-teaser__image {
            width: 48%;
              img {
                  max-width: 100%;
                  height: auto;
              }
          }
		.cmp-teaser__content {
			padding-right: 4rem;
            width: 50%;
		}
	}
	.greybg-container .image-left, .whitebg-container .image-left {
         .cmp-teaser {
            	display: flex;
			flex-direction:row;
        }

		.cmp-teaser__image {
            width: 50%;
              img {
                  max-width: 100%;
                  height: auto;
              }
          }
	}
	
	.image-right{
		.cmp-teaser {
			display: flex;
			flex-direction:row-reverse;
		}
		.cmp-teaser__image {
			width: 50%;
			  img {
				  max-width: 100%;
				  height: auto;
			  }
		  }
		.cmp-teaser__content {
			width: 50%;
		}
	}
	
	.image-left {
		.cmp-teaser {
			   display: flex;
		   flex-direction:row;
	   }
	
	   .cmp-teaser__image {
		   width: 50%;
			 img {
				 max-width: 100%;
				 height: auto;
			 }
		 }
	}
}

.cmp-nobg__teaser {
	.cmp-teaser__title a {
		color: #353738;
		font-size: $font34!important;
		line-height: 1.3 !important;
	}
	.cmp-teaser__title {
		font-size: $font28;
	}
	.cmp-teaser__description p {
		font-size: 1rem!important;
		margin-top: 1rem;
	}
	.cmp-teaser__description p {
		color: #6f6c70;
		font-size: 14px!important;
		line-height: 20px!important;
		margin-top: 10px;
	}
	.cmp-teaser__action-container {
		margin-top: 20px;
		padding: 10px;
		border: 1px solid #151515!important;
		border-radius: 4px;
		border-width: 1px;
		text-align: center;
	}
	.cmp-teaser__action-container:after {
		clear: both;
	}
	.cmp-teaser__action-container a:hover {
		box-shadow: none!important;
		color: #719e19;
		background-color: #fff;
		.cmp-teaser__action-container {
			border-color: #719e19;
		}
	}
	.cmp-teaser__action-container a {
		font-size: 16px;
		text-transform: uppercase;
		transition: all .3s ease-in-out;
		color: #353738;
		letter-spacing: .14285714em;
		outline: 0;
	}
}

@media (min-width: 992px) {
	.cmp-nobg__teaser {
		.cmp-teaser__action-container {
			min-width: 180px;
			width: auto;
			margin-top: -35px;
			float: right;
			border: 1px solid #151515!important;
			border-radius: 4px;
			border-width: 1px;
			padding: 10px;
		}
		.cmp-teaser__action-container a {
			font-size: 16px;
			letter-spacing: .14285714em;
			text-transform: uppercase;
			transition: all .3s ease-in-out;
			color: #353738;
			text-align: center;
		}
		.cmp-teaser {
			// background-color: hsla(0, 0%, 95%, .3);
			padding: 3rem;
		}
		.cmp-teaser__title {
			font-size: 32px;
		}
		.cmp-teaser__description p {
			font-size: 1rem!important;
			margin-top: 1.5rem;
			width: 70%;
		}
	}
	.cmp-purplebg__teaser {
		.cmp-teaser__action-container {
			width: 282px;
			bottom: 40%;
			position: absolute;
			left: 70%;
			border: 1px solid #fff!important;
			border-radius: 4px;
			border-width: 1px;
			padding: 10px;
			text-align: center;
		}
		.cmp-teaser__action-container a {
			font-size: 16px;
			letter-spacing: 3px;
			text-transform: uppercase;
			transition: all .3s ease-in-out;
			color: #fff;
			font-weight: 700;
		}
		.cmp-teaser__action-container:after {
			clear: both;
		}
		.cmp-teaser__description {
			padding-left:12px;
			width: 100%;
		}
	}
}

.cmp-purplebg__teaser {
	padding: 2rem;
	.cmp-teaser {
		border-radius: 8px;
		position: relative;
		padding: 2.5rem 50px 2.5rem 38px;
		color: #fff;
		background: linear-gradient( -92.14deg, #222 41%, #491873 110%)!important;
	}
	.cmp-teaser:before,
	.cmp-teaser:after {
		content: "";
		position: absolute;
		width: 100%;
		height: 100%;
		top: 0;
		background: url('../resources/images/promo_pattern_top.svg') left 0 no-repeat;
		background-size: contain;
		opacity: .7;
		left:0px;
	}
	a.cmp-teaser__title-link {
		font-size: 24px;
		margin-bottom: 16px;
		margin-top: 0;
		color: #fff;
	}
	.cmp-teaser__description p {
		font-size: 1rem!important;
		margin-top: 1.5rem;
		line-height: 26px;
		color: #fff !important;
		width: 44%;
	}
	.cmp-teaser__action-container {
		border: 1px solid #fff!important;
		border-radius: 4px;
		border-width: 1px;
		padding: 0;
		text-align: center;
	}
	.cmp-teaser__action-container a {
		position: relative;
		z-index: 1;
		font-size: 16px;
		letter-spacing: 3px;
		text-transform: uppercase;
		transition: all .3s ease-in-out;
		color: #fff;
		height: 3rem;
		font-size: .875rem;
		line-height: 1.5rem;
		font-family: Lato,GE SS Two,Roboto,Arial,sans-serif;
		font-weight: 700;
		padding: 0 .5rem;
		display: block;
		top: 14px;
	}
	.cmp-teaser__description h3 {
		font-size: 24px;
		color: #fff !important;
	}	
	@media(min-width:$screen-xl-max){
		.cmp-teaser__description {
			width: 70%;
		}
	}
}
@media(min-width:$desktop){
	.cmp-teaser:after {
		content: "";
		right: auto;
		left: 0;
		transform: rotate( 180deg);
	}
}


@media (min-width:768px) and (max-width:1024px) {
	.cmp-purplebg__teaser {
		padding: 2rem 8px !important;
		.cmp-teaser{
			padding: 2rem 15px !important;
		}
	}
}
@media (min-width:360px) and (max-width:768px) {
	.cmp-purplebg__teaser {
		padding: 2rem 8px !important;
		.cmp-teaser{
			padding: 2rem 15px !important;
		}
		.cmp-teaser__action-container {
			margin-top: 20px;
			padding: 0;
			border: 1px solid #fff!important;
			border-radius: 4px;
			border-width: 1px;
			text-align: center;
		}
		.cmp-teaser__action-container a {
			font-size: 16px;
			text-transform: uppercase;
			transition: all .3s ease-in-out;
			color: #fff;
			letter-spacing: 3px;
			outline: 0;
		}
		.cmp-teaser__description p {
			width: 95%;
		}
	}
}
//center card teaser variant
.cmp-center-card {
	.cmp-teaser {
		text-align: center;
		padding: 48px;
	}
	.cmp-teaser__image img {
		width: 4.4375rem;
		height: 4.4375rem;
		margin-bottom: 2.2rem;
	}
	.cmp-teaser__content h2 a {
		color: #353738;
		font-size: $font24;
		cursor: auto;
	}
	.cmp-teaser__title {
		font-size: $font24;
		margin-bottom: .65rem;
		margin-top: 0;
		white-space: nowrap;
		text-overflow: ellipsis;
		height: 32px;
	}
	.cmp-teaser__description {
		height: 54px;
		margin-bottom: 1.65rem;
	}
	.cmp-teaser__description p {
		color: #848789;
		font-size: .875rem;
		line-height: 24px;
		margin: 0;
	}
	.cmp-teaser__action-container a {
		font-size: .875rem;
		line-height: 1.25rem;
		letter-spacing: 2px;
		color: 719e19;
	}
	.cmp-teaser__action-container a:hover {
		text-decoration: underline;
	}
	.cmp-teaser__action-link:after {
		-webkit-transform: translateY(-50%) rotate(45deg);
		border-top: 1px solid #719e19;
		border-right: 1px solid #719e19;
		padding: 3px;
		margin: 12px 0px 0px 12px;
		content: "";
		position: absolute;
	}
}
	@media (min-width: 365px) and (max-width: 700px) {
.cmp-center-card{
	.aem-Grid.aem-Grid--phone--12>.aem-GridColumn.aem-GridColumn--offset--phone--0 {
			  width: 100%!important;
		   }
		}
	}

